Add 128-bit integer math support for FF3 cipher
Fix decrypt bug

Add vim buffers to .gitignore

Double -> single underscore for lib-level macros

Add simple benchmark target

Fix probabilistic segfault bug on calculating P

Rename `rradix` -> `radix_ull`

Refactor benchmarks

benchmark `x_test` -> `random_outputs`

Remove unneeded includes from `example.c`

Add ff3 decrypt to `random_outputs`

Fix feature macro indentation, add comment

Add more benchmarks

Remove printf from ff1, clean up benchmarks

Add benchmark blurb to README

Comment out number-printing helpers

Add decrypt sub_mod comment

Remove unused code in benchmark.c

Fix missing dependency for `test` target

fix: accounting for different fpe lib file names in unit_test.py based on os type

Make byte[] to uint128 conv endian-independent

Clarify calculate_p condition

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Build artifacts
 *.a
 *.dylib
 src/*.o
+*.so
+/example
+/benchmark
+
+# Local file used for testing
+oneshot.c
+
+# Ignore VSCode settings for the time being
+.vscode/
+.devcontainer/
+
+# Vim temp buffers
+*.swo
+*.swp
